@@ -1,3 +1,6 @@
+* 2005-07-05 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Start FITS import dialog
+	
 * 2005-07-03 Jeremy Sanders <jeremy@jeremysanders.net>
 	- 2D data import dialog
 	- Improvements to 1D data import dialog
